--- a/login.html
+++ b/login.html
@@ -9,71 +9,74 @@
   </head>
 
   <body>
-    <div class="box">
-      <div class="head">
-        <img
-          style="margin-top: 19px"
-          height="10%"
-          width="100%"
-          src="images/logo.png"
-        />
-      </div>
-      <div class="signin">
-        <h1 style="padding-left: 11px">Sign in</h1>
-        <h4>or <a href="signup.html"> create an account</a></h4>
-      </div>
-
-      <form class="form">
-        <label for=""> Email<span class="required">*</span></label
-        ><br />
-        <input
-          id="email"
-          type="email"
-          required=""
-          placeholder="name@gmail.com"
-        />
-        <label for="">Password<span class="required">*</span></label>
-        <input type="password" placeholder="8 or more characters" id="pass" />
-
-        <input
-          type="submit"
-          value="Continue"
-          style="margin-top: 15px; font-size: 19px"
-        />
-      </form>
-    </div>
-
-    <div class="btm">
-      <div
-        style="
-          z-index: 100;
-          margin: 20px 0px;
-          border: none;
-          display: flex;
-          align-items: center;
-          height: 1px;
-          justify-content: center;
-          background-color: grey;
-        "
-      >
-        <div
-          style="padding: 3px 8px; margin-top: -3px; background-color: white"
-        >
-          or
+    <div>
+      <div class="box">
+        <div class="head">
+          <img
+            style="margin-top: 19px"
+            height="10%"
+            width="100%"
+            src="images/logo.png"
+          />
         </div>
+        <div class="signin">
+          <h1 style="padding-left: 11px">Sign in</h1>
+          <h4>or <a href="signup.html"> create an account</a></h4>
+        </div>
+
+        <form class="form">
+          <label for=""> Email<span class="required">*</span></label
+          ><br />
+          <input
+            id="email"
+            type="email"
+            required=""
+            placeholder="name@gmail.com"
+          />
+          <label for="">Password<span class="required">*</span></label>
+          <input type="password" placeholder="8 or more characters" id="pass" />
+
+          <input
+            type="submit"
+            value="Continue"
+            style="margin-top: 15px; font-size: 19px"
+          />
+        </form>
       </div>
 
-      <div class="gooo">
-        <mark>Continue with Google</mark>
-        <img
-          style="width: 7%; padding-left: 15px"
-          src="images/google-logo.png"
-        />
-      </div>
+      <div class="btm">
+        <div
+          style="
+            z-index: 100;
+            margin: 20px 0px;
+            border: none;
+            display: flex;
+            align-items: center;
+            height: 1px;
+            justify-content: center;
+            background-color: grey;
+          "
+        >
+          <div
+            style="padding: 3px 8px; margin-top: -3px; background-color: white"
+          >
+            or
+          </div>
+        </div>
 
-      <p><u>Sign in with Apple </u></p>
+        <div class="gooo">
+          <mark>Continue with Google</mark>
+          <img
+            style="width: 7%; padding-left: 15px"
+            src="images/google-logo.png"
+          />
+        </div>
+
+        <p><u>Sign in with Apple </u></p>
+      </div>
     </div>
   </body>
 </html>
 
 <script src="/urbane-look-6820/login.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
