--- a/signup.html
+++ b/signup.html
@@ -10,65 +10,74 @@
   </head>
 
   <body>
-    <div class="box">
-      <div class="head">
-        <img src="images/logo.png" />
-      </div>
-      <h1 style="padding-left: 9px">Create your free account</h1>
-
-      <form class="form">
-        <label for="">Full Name<span class="required">*</span></label
-        ><br />
-        <input type="text" placeholder="first and last" id="name" required="" />
-        <label for=""> Email<span class="required">*</span></label
-        ><br />
-        <input
-          id="email"
-          type="email"
-          required=""
-          placeholder="name@gmail.com"
-        />
-        <label for="">Password<span class="required">*</span></label>
-        <input
-          type="password"
-          placeholder="8 or more characters"
-          id="pass"
-          pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-          title="Must contain at least one number and one uppercase and at least 8 or more characters"
-          required
-        />
-        <input
-          type="submit"
-          value="Continue"
-          style="margin-top: 15px; font-size: 19px"
-        />
-      </form>
-    </div>
-
-    <div class="btm">
-      <!-- <hr style="margin-top:30px" size="3"  margin-top=30px width="90%" color="lightgrey">or</hr> -->
-      <div class="or">
-        <div
-          style="padding: 3px 8px; margin-top: -3px; background-color: white"
-        >
-          or
+    <div>
+      <div class="box">
+        <div class="head">
+          <img src="images/logo.png" />
         </div>
+        <h1 style="padding-left: 9px">Create your free account</h1>
+
+        <form class="form">
+          <label for="">Full Name<span class="required">*</span></label
+          ><br />
+          <input
+            type="text"
+            placeholder="first and last"
+            id="name"
+            required=""
+          />
+          <label for=""> Email<span class="required">*</span></label
+          ><br />
+          <input
+            id="email"
+            type="email"
+            required=""
+            placeholder="name@gmail.com"
+          />
+          <label for="">Password<span class="required">*</span></label>
+          <input
+            type="password"
+            placeholder="8 or more characters"
+            id="pass"
+            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+            title="Must contain at least one number and one uppercase and at least 8 or more characters"
+            required
+          />
+          <input
+            type="submit"
+            value="Continue"
+            style="margin-top: 15px; font-size: 19px"
+          />
+        </form>
       </div>
 
-      <div class="goo">
-        <mark>Continue with Google</mark>
-        <img
-          style="width: 7%; padding-left: 15px"
-          src="images/google-logo.png"
-        />
+      <div class="btm">
+        <!-- <hr style="margin-top:30px" size="3"  margin-top=30px width="90%" color="lightgrey">or</hr> -->
+        <div class="or">
+          <div
+            style="padding: 3px 8px; margin-top: -3px; background-color: white"
+          >
+            or
+          </div>
+        </div>
+
+        <div class="goo">
+          <mark>Continue with Google</mark>
+          <img
+            style="width: 7%; padding-left: 15px"
+            src="images/google-logo.png"
+          />
+        </div>
+        <p>Continue with Apple ID</p>
+        <p style="padding-top: 10px">
+          By creating an account, you agree to the Terms of Service and Privacy
+          Policy.
+        </p>
+        <p>Already have an account? <a href="login.html">Sign in</a></p>
       </div>
-      <p>Continue with Apple ID</p>
-      <p style="padding-top: 10px">
-        By creating an account, you agree to the Terms of Service and Privacy
-        Policy.
-      </p>
-      <p>Already have an account? <a href="login.html">Sign in</a></p>
     </div>
   </body>
 </html>
+
 <script src="signup.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
