--- a/mens.html
+++ b/mens.html
@@ -15,7 +15,16 @@
     <div id="container">
 
 
-        <div id="slider"></div>
+        <div id="sliderDiv">
+            <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/HP_LS_MEN_Desktop-1-12Dec2022A.gif" class="slider" alt="">
+            <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/HP_LS_MEN_Desktop-2-12Dec2022.jpg" class="slider" alt="">
+            <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/HP_LS_MEN_Desktop-3-12Dec2022.jpg" class="slider" alt="">
+            <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/HP_LS_MEN_Desktop-4-12Dec2022.jpg" class="slider" alt="">
+            <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/LS-Banner5-desktop-MEN-12Dec2022.jpg" class="slider" alt=""> 
+        </div>
+        <button class="pre"><</button>
+        <button class="next">></button>
+
         <h2>Deal Corner</h2>
         <hr>
         <div id="buyFree">
@@ -90,3 +99,6 @@
 
 </html>
 <script src="mens.js"></script>
+
+
+
