day all task done

--- a/index.html
+++ b/index.html
@@ -26,25 +26,9 @@
     </div>
   </div>
 
-
+<div id="nav">
   <div id="nav_bar">
-   <div id="side_menu">
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#">Womens</a>
-      <a href="#">Mens</a>
-      <a href="#">Kids</a>
-      <a href="#">Shoes&Bag</a>
-      <a href="#">SignIn/SignUp</a>
-      <a href="#">Cart</a>
-
-      
-    </div>
-    <div id="main">
-      
-      <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
-    </div>
-   </div>
+   
 
     <a href=""> <img src="./images/StyleZillaWIthoutBackground.png" alt="" id="logo"></a>
     <a href="" id="women_list_head">
@@ -62,7 +46,7 @@
     <a href="" id="beauty_head">
       <h4>Beauty</h4>
     </a>
-    <input type="text" placeholder="🔍  What are you looking for ?">
+    <input type="text" placeholder="🔍  What are you looking for ?" id="searchbar">
     <a href="" id="more_head">
       <h4>More</h4>
     </a>
@@ -76,11 +60,12 @@
       <h4>Cart</h4>
     </a>
   </div>
-
+</div>
 
   <!-- drop down list -->
-
+ <div id="drop_down">
   <!-- women list -->
+
   <div id="women_list">
     <div>
       <a href="">Ethnic & Fusion Wear</a><br>
@@ -356,6 +341,7 @@
     </div>
 
   </div>
+</div>
  <!-- login signup popup
  <div id="pop_up">
   <div>
@@ -424,7 +410,7 @@
 <div class="off_section">
   <a href=""><img
       src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/Uber-HP-Desktop-PromoStrip2-08Dec2022.jpg"
-      alt="" srcset=""></a>
+      alt="" srcset="" id="offer_section_img"></a>
 </div>
 
 <!-- our benifit -->
