day3_work added checkout page and payment page

--- a/signup.html
+++ b/signup.html
@@ -22,18 +22,14 @@
           ><br />
           <input
             type="text"
+            required=""
             placeholder="first and last"
             id="name"
             required=""
           />
           <label for=""> Email<span class="required">*</span></label
           ><br />
-          <input
-            id="email"
-            type="email"
-            required=""
-            placeholder="name@gmail.com"
-          />
+          <input id="email" type="email" placeholder="name@gmail.com" />
           <label for="">Password<span class="required">*</span></label>
           <input
             type="password"
