--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
           />
         </div>
         <div class="signin">
-          <h1 style="padding-left: 11px">Sign in</h1>
+          <h1 style="padding-left: 11px; color: #faa619 ;">Sign in</h1>
           <h4>or <a href="signup.html"> create an account</a></h4>
         </div>
 
