--- a/oneImageDetail.html
+++ b/oneImageDetail.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="mens.css">
+    <link rel="stylesheet" href="oneImageDetail.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
-
 <body>
-    
-
-    <!----------------------------------------------- Header HTML ----------------------------------------------->
+     <!----------------------------------------------- Header HTML ----------------------------------------------->
    <header>
     <div id="top_bar">
       <div id="left_top">
@@ -32,7 +29,7 @@
       <img src="image/styleZilla.png" alt="" id="logo" />
       <div>
         <a href=""> <h4>Women</h4></a>
-        <a href=""> <h4>Men</h4></a>
+        <a href="mens.html"> <h4>Men</h4></a>
         <a href=""> <h4>Kids</h4></a>
         <a href=""> <h4>Shoes</h4></a>
         <a href=""> <h4>Bags</h4></a>
@@ -50,77 +47,69 @@
 <!----------------------------------------------- Header HTML end ----------------------------------------------->
 
 
-
-
     <div id="container">
-        <h2>Deal Corner</h2>
-        <hr>
-        <div id="buyFree">
-            
+        <div class="image"></div>
+        <div class="checkBox">
+            <i class="fa-solid fa-indian-rupee-sign"></i>
+            <span class="price"></span>
+            <span>Inclusiv of all taxes</span>
+            <span>price</span><span>Svae price</span>
+            <p class="ship margin">Free shipping on all orders</p>
+            <div class="smallImage margin"></div>
+            <p>Color: ${color}</p>
+            <div class="size"><p>Size:</p><p>Size Guide</p></div>
+            <div class="sizeButton">
+                <button>S</button>
+                <button>M</button>
+                <button>L</button>
+                <button>XL</button>
+                <button>XXL</button>
+                <button>4XL</button>
+                <button>5XL</button>
+            </div>
+            <button class="basket margin">ADD TO BASKET</button>
+            <div class="favourite margin"><p>Add to Favourites</p><p><i>font icon</i> Share</p></div>
+            <hr>
+            <button>PROMOTION OFFER</button>
+            <p class="anchor">Shop for Rs. 2,999 & Get 10% Off. Code - EOSS10 <a href="#">Browse promotion</a></p>
+            <hr>
+            <div>
+                <p class="collect"><i class="fa-solid fa-archway"></i>Click & Collect</p>
+                <p class="text" >Order this product now and collext it from a store of your choice. <a href="#">Learn more</a></p>
+            </div>
+            <p><i class="fa-sharp fa-solid fa-arrow-left-long arrow"></i> 10 days easy return policy. <a href="#">Learn more</a></p>
+            <div>
+                <p><i class="fa-solid fa-calendar-days"></i>Pay in installments</p>
+                <p class="text">Pay in easy installments on orders of ₹ 3,000 or more. Available for select banks. <a href="#">Learn more</a></p>
+            </div>
+            <p><i class="fa-solid fa-truck truck"></i>When willl I receive my order?</p>
+            <input type="number" placeholder="Enter your Pincode" class="pinCode"><button>Check</button>
+            <hr style="margin: 25px;">
+            <h3>Overview</h3>
+            <p>This polo t-shirt comes with a striped pattern that is enhanced by vented hems and a half-sleeved silhouette.</p>
+            <ul class="list">
+                <li>Type : Polo Neck</li>
+                <li>Design : Striped</li>
+                <li>Length : Short</li>
+                <li>Sleeve Length : Half Sleeves</li>
+                <li>Fabric : Cotton Blend</li>
+                <li>Fit : Slim</li>
+                <li>Care Instructions : Hand Wash</li>
+                <li>Model Wears : Size M, has Height 6'0" and</li>
+                <li>Occasion : Casual</li>
+                <li>Product : T-shirt</li>
+                <li>Country of Origin : India</li>
+                <li>Manufactured By : Fahrenheit Clothing (India) Pvt Ltd</li>
+                <li>For Consumer Complaints Contact : Manager Commercial, Lifestyle International Pvt. Ltd. 1800-123-1555</li>
+                <li>Net Quantity : 1</li>
+            </ul>
         </div>
-        <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/desktop-dept-13modblock-oneBythree-A-menstripbanner-09Dec2022.gif"
-            alt="">
-        <h2>Brand Spotlight</h2>
-        <hr>
-        <div id="brandImage"></div>
-        <h2>Whiterwear Essentials</h2>
-        <hr>
-        <div id="winterClothes">6</div>
-        <h2>Big Brands. Big Discounts</h2>
-        <hr>
-        <div id="bigBrandsProducts"></div>
-        <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/desktop-men-9modblock-StripBanner2-D-24Nov2022.jpg"
-            alt="">
-        <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/desktop-men-8modblock-oneBythree-D-25Nov2022.jpg"
-            alt="">
-        <h2>Shop By category</h2>
-        <hr>
-        <div id="categoryProducts"></div>
-        <h2>Top Trending Brands</h2>
-        <hr>
-        <div id="trandingBrands">12</div>
-        <h2>Flash Sale for Today</h2>
-        <hr>
-        <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/desktop-LS-MEN-modularblock7-oneBythree-A-Men-08Dec2022.jpg"
-            alt="">
-        <h2>Top Picks</h2>
-        <hr>
-        <div id="TopPicks">3</div>
-        <h2>Winter Trends</h2>
-        <hr>
-        <div id="winterTrends">3</div>
-        <h2>Most Loved Styles</h2>
-        <hr>
-        <div id="mostlovedstyle"></div>
-        <h2>Highlights of the Day</h2>
-        <hr>
-        <div id="highlights">3</div>
-        <h2>Trendsetters</h2>
-        <hr>
-        <div id="trendsclothes">3</div>
-        <h2>Active Wardrobe</h2>
-        <hr>
-        <div id="activeWardrobe">3</div>
-        <h2>Deal Corner</h2>
-        <hr>
-        <div id="dealCorner">5</div>
-        <div id="button"><button>SEE ALL</button></div>
-        <h2>Most loved brands</h2>
-        <hr>
-        <div id="mostLovedBrands">2</div>
-        <h2>Essentials For You</h2>
-        <hr>
-        <div id="essentials">2</div>
-        <h2>Trending Watches</h2>
-        <hr>
-        <div id="watch">3</div>
-        <div id="button"><button>SEE ALL</button></div>
-        <h2>Shop By Department</h2>
-        <hr>
-        <div id="shopByDepartment">3</div>
     </div>
+    <!-- fetch Image -->
+    <p class="likeMoreProducts">You may also like</p>
+    <div id="someImage"></div>
 
-   <!----------------------------------------------- Footer HTML Start ----------------------------------------------->
+    <!----------------------------------------------- Footer HTML Start ----------------------------------------------->
 <!-- subscribe section -->
 <div id="subscribe">
     <div id="email_subs">
@@ -252,11 +241,6 @@
   </div>
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
   <!----------------------------------------------- Footer HTML End ----------------------------------------------->
-
 </body>
-
 </html>
-<script src="mens.js"></script>
-
-
-
+<script src="oneImageDetail.js"></script>
