--- a/checkout.html
+++ b/checkout.html
@@ -249,3 +249,5 @@
   </body>
 </html>
 <script src="Js/checkout.js"></script>
+<!-- ?? This is the ALERTIFY & SweetAlert Library -->
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
