--- a/Orders.html
+++ b/Orders.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin: Orders & Payments</title>
     <link rel="stylesheet" href="CSS/Orders.css" />
-    <link rel="stylesheet" href="CSS/HeaderFooter.css">
+    <link rel="stylesheet" href="CSS/HeaderFooter.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,86 +27,49 @@
           <a href=""> <h4>Bags</h4></a>
           <a href=""><h4>Beauty</h4></a>
           <a href="" id="searchbar"
-            ><input type="text" placeholder="🔍  What are you looking for ?"
+            ><input type="text" placeholder="🔍  Search for Products"
           /></a>
           <a href=""> <h4>More</h4></a>
-          <a href=""><h4 id="signin">SignUp/SignIn</h4></a>
+          <a href=""><h4 id="signin">👤 Admin</h4></a>
           <a href=""> <h4>Wishlist</h4></a>
           <a href=""><h4>Cart</h4></a>
         </div>
       </div>
     </header>
     <!----------------------------------------------- Main Body ----------------------------------------------->
-
+    <img id="loader" src="./Images/spinner1.gif" id="loader" alt="" />
     <main>
-      <section>
-        <div id="mainsect">
-          <div id="tophead">
-            <h1 class="manage-order">🛍️ Manage Orders</h1>
-            <div>hello</div>
-          </div>
-      </section>
-      <section>
-          <div id="tophead">
-            <h1 class="manage-order">🛍️ Manage Payments</h1>
-            <div>hello</div>
-          </div>
+      <section class="mainsect1">
+        <div id="tophead">
+          <h1 class="manage-order"> Manage Orders🛍️</h1>
+          <div class="orders-container">
+            <label>No orders to manage</label>
+           </div>
         </div>
       </section>
       <section>
         <div id="tophead" class="allproducts">
-          <h1 class="manage-order">🛍️ All Products</h1>
+          <h1 class="manage-order"> All Products 🛍️</h1>
           <div class="container">
+    
             <!-- ? Append Data Here -->
           </div>
         </div>
       </section>
       <section>
-          <div class="showproducttop">
+        <div class="showproducttop">
           <h1>
-            🛍️ Show All Products<br />
+            Show All Products🛍️ <br />
             <select name="Select Database" id="select">
               <option value="">Select Category</option>
-              <option
-                value="https://63984241fe03352a94ca27c3.mockapi.io/lifestyleApi/womensTopWear"
-              >
-                Womens Top Wear
-              </option>
-              <option
-                value="https://63984241fe03352a94ca27c3.mockapi.io/lifestyleApi/WomensEthnicWear"
-              >
-                Women Ethnic Wear
-              </option>
-              <option
-                value="https://63984241fe03352a94ca27c3.mockapi.io/lifestyleApi/MensFormals"
-              >
-                Mens Formals
-              </option>
-              <option
-                value="https://63984241fe03352a94ca27c3.mockapi.io/lifestyleApi/MensCasuals"
-              >
-                Mens Casuals
-              </option>
-              <option
-                value="https://63987962044fa481d69ed8cc.mockapi.io/stylezilla/KidsWear"
-              >
-                KidsWear
-              </option>
-              <option
-                value="https://63987962044fa481d69ed8cc.mockapi.io/stylezilla/BeautyProducts"
-              >
-                Beauty Products
-              </option>
-              <option
-                value="https://63987962044fa481d69ed8cc.mockapi.io/stylezilla/Shoes"
-              >
-                Shoes
-              </option>
-              <option
-                value="https://63987962044fa481d69ed8cc.mockapi.io/stylezilla/Bags"
-              >
-                Bags
-              </option>
+              <option value="https://63984241fe03352a94ca27c3.mockapi.io/lifestyleApi/womensTopWear">Womens Top Wear</option>
+              <option value="https://63984241fe03352a94ca27c3.mockapi.io/lifestyleApi/WomensEthnicWear">Women Ethnic Wear</option>
+              <option value="https://63984241fe03352a94ca27c3.mockapi.io/lifestyleApi/MensFormals">Mens Formals</option>
+              <option value="https://63984241fe03352a94ca27c3.mockapi.io/lifestyleApi/MensCasuals">Mens Casuals</option>
+              <option value="https://63987962044fa481d69ed8cc.mockapi.io/stylezilla/KidsWear">KidsWear</option>
+              <option value="https://63987962044fa481d69ed8cc.mockapi.io/stylezilla/BeautyProducts">Beauty Products</option>
+              <option value="https://63987962044fa481d69ed8cc.mockapi.io/stylezilla/Shoes">Shoes</option>
+              <option value="https://63987962044fa481d69ed8cc.mockapi.io/stylezilla/Bags">Bags</option>
             </select>
           </h1>
           <a href="Admin.html" id="adminspagebutton">Admins Page</a>
@@ -115,11 +78,13 @@
     </main>
     <!----------------------------------------------- Footer ----------------------------------------------->
     <footer></footer>
+  </not prettier>
   </body>
 </html>
 <script src="Js/Orders.js"></script>
 
-<!-- ?? This is the ALERTIFY Library -->
+<!-- ?? This is the ALERTIFY & SweetAlert Library -->
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <!-- JavaScript -->
 <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
 <!-- CSS -->
