fixed some issues

--- a/Orders.html
+++ b/Orders.html
@@ -83,12 +83,5 @@
 </html>
 <script src="Js/Orders.js"></script>
 
-<!-- ?? This is the ALERTIFY & SweetAlert Library -->
+<!-- ??  SweetAlert Library -->
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<!-- JavaScript -->
-<script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
-<!-- CSS -->
-<link
-  rel="stylesheet"
-  href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"
-/>
