--- a/checkout.html
+++ b/checkout.html
@@ -49,6 +49,11 @@
         <hr />
         <div class="checkoutpage">
           <div class="showproducts">
+            <label>Your Basket is Empty..</label>
+
+            <a href="index.html"
+              ><button class="EmptyCart">Lets look for Products-></button></a
+            >
             <!-- append cards here -->
           </div>
           <div class="checkoutsection">
@@ -83,7 +88,7 @@
             <div id="totals" class="checkout-subs">
               <div>
                 <label class="totals">Total Price</label>
-                <label>1000</label>
+                <label>₹ 000</label>
               </div>
               <div>
                 <label class="totals">Shipping Charge:</label>
@@ -92,7 +97,7 @@
               <hr />
               <div>
                 <label class="totals Total">Total</label>
-                <label class="Total">$1000</label>
+                <label class="Total">₹ 000</label>
               </div>
               <br />
               <div>
