day 4 all issue resolved

--- a/index.html
+++ b/index.html
@@ -27,36 +27,37 @@
   </div>
 
 <div id="nav">
+ 
   <div id="nav_bar">
    
-
+  
     <a href=""> <img src="./images/StyleZillaWIthoutBackground.png" alt="" id="logo"></a>
-    <a href="" id="women_list_head">
+    <a href="" id="women_list_head" class="nav_menu">
       <h4>Women</h4>
     </a>
-    <a href="" id="men_list_head">
+    <a href="" id="men_list_head" class="nav_menu">
       <h4>Men</h4>
     </a>
-    <a href="" id="kids_head">
+    <a href="" id="kids_head" class="nav_menu">
       <h4>Kids</h4>
     </a>
-    <a href="" id="shoes_bag_head">
+    <a href="" id="shoes_bag_head" class="nav_menu">
       <h4>Shoes&Bags</h4>
     </a>
-    <a href="" id="beauty_head">
+    <a href="" id="beauty_head" class="nav_menu">
       <h4>Beauty</h4>
     </a>
     <input type="text" placeholder="🔍  What are you looking for ?" id="searchbar">
     <a href="" id="more_head">
       <h4>More</h4>
     </a>
-    <a href="" id="login_head">
+    <a href="" id="login_head" class="nav_menu">
       <h4>SignUp/SignIn</h4>
     </a>
-    <a href="" id="wish_head">
+    <a href="" id="wish_head" class="nav_menu">
       <h4>Wishlist</h4>
     </a>
-    <a href="" id="cart_head">
+    <a href="" id="cart_head" class="nav_menu">
       <h4>Cart</h4>
     </a>
   </div>
