--- a/Orders.html
+++ b/Orders.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <!----------------------------------------------- Header ----------------------------------------------->
+    <!--?--------------------------------------------- Header ----------------------------------------------->
     <header>
       <div id="nav_bar">
         <img src="./Images/StyleZillaWIthoutBackground.png" alt="" id="logo" />
@@ -36,7 +36,7 @@
         </div>
       </div>
     </header>
-    <!----------------------------------------------- Main Body ----------------------------------------------->
+    <!--?--------------------------------------------- Main Body ----------------------------------------------->
     <img id="loader" src="./Images/spinner1.gif" id="loader" alt="" />
     <main>
       <section class="mainsect1">
@@ -76,12 +76,12 @@
         </div>
       </section>
     </main>
-    <!----------------------------------------------- Footer ----------------------------------------------->
+    <!--?--------------------------------------------- Footer ----------------------------------------------->
     <footer></footer>
   </not prettier>
   </body>
 </html>
 <script src="Js/Orders.js"></script>
 
-<!-- ??  SweetAlert Library -->
+<!--??--------------------------------------------- <SweetAlert Library> ----------------------------------------------->
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
