--- a/checkout.html
+++ b/checkout.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="CSS/HeaderFooter.css" />
   </head>
   <body>
-    <!----------------------------------------------- Header ----------------------------------------------->
+    <!--?--------------------------------------------- Header ----------------------------------------------->
     <div id="top_bar">
       <div id="left_top">
         <h5>🚚 Free Shiping</h5>
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <!----------------------------------------------- Main Body ----------------------------------------------->
+    <!--?--------------------------------------------- Main Body ----------------------------------------------->
     <main>
       <section>
         <h1 class="yourproducts">Your Shopping Basket</h1>
@@ -116,7 +116,7 @@
         </div>
       </section>
     </main>
-    <!----------------------------------------------- Footer ----------------------------------------------->
+    <!--?--------------------------------------------- Footer ----------------------------------------------->
     <!-- subscribe section -->
     <div id="subscribe">
       <div id="email_subs">
@@ -254,5 +254,6 @@
   </body>
 </html>
 <script src="Js/checkout.js"></script>
-<!-- ?? This is the ALERTIFY & SweetAlert Library -->
+
+<!-- ?? SweetAlert Library -->
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
