--- a/oneImageDetail.html
+++ b/oneImageDetail.html
@@ -77,12 +77,12 @@
                 <p class="collect"><i class="fa-solid fa-archway"></i>Click & Collect</p>
                 <p class="text" >Order this product now and collext it from a store of your choice. <a href="#">Learn more</a></p>
             </div>
-            <p><i class="fa-sharp fa-solid fa-arrow-left-long arrow"></i> 10 days easy return policy. <a href="#">Learn more</a></p>
+            <p class="return"><i class="fa-sharp fa-solid fa-arrow-left-long arrow"></i> 10 days easy return policy. <a href="#">Learn more</a></p>
             <div>
-                <p><i class="fa-solid fa-calendar-days"></i>Pay in installments</p>
+                <p class="pay"><i class="fa-solid fa-calendar-days"></i>Pay in installments</p>
                 <p class="text">Pay in easy installments on orders of ₹ 3,000 or more. Available for select banks. <a href="#">Learn more</a></p>
             </div>
-            <p><i class="fa-solid fa-truck truck"></i>When willl I receive my order?</p>
+            <p class="order"><i class="fa-solid fa-truck truck"></i>When willl I receive my order?</p>
             <input type="number" placeholder="Enter your Pincode" class="pinCode"><button>Check</button>
             <hr style="margin: 25px;">
             <h3>Overview</h3>
