--- a/mens.html
+++ b/mens.html
@@ -2,18 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="mens.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="mens.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    
 
-    <!----------------------------------------------- Header HTML ----------------------------------------------->
-   <header>
+
+  <!----------------------------------------------- Header HTML ----------------------------------------------->
+  <header>
     <div id="top_bar">
       <div id="left_top">
         <h5>🚚 Free Shiping</h5>
@@ -31,98 +34,174 @@
     <div id="nav_bar">
       <img src="image/styleZilla.png" alt="" id="logo" />
       <div>
-        <a href=""> <h4>Women</h4></a>
-        <a href=""> <h4>Men</h4></a>
-        <a href=""> <h4>Kids</h4></a>
-        <a href=""> <h4>Shoes</h4></a>
-        <a href=""> <h4>Bags</h4></a>
-        <a href=""><h4>Beauty</h4></a>
-        <a href="" id="searchbar"
-          ><input type="text" placeholder="🔍  What are you looking for ?"
-        /></a>
-        <a href=""> <h4>More</h4></a>
-        <a href=""><h4 id="signin">SignUp/SignIn</h4></a>
-        <a href=""> <h4>Wishlist</h4></a>
-        <a href=""><h4>Cart</h4></a>
+        <a href="">
+          <h4>Women</h4>
+        </a>
+        <a href="">
+          <h4>Men</h4>
+        </a>
+        <a href="">
+          <h4>Kids</h4>
+        </a>
+        <a href="">
+          <h4>Shoes</h4>
+        </a>
+        <a href="">
+          <h4>Bags</h4>
+        </a>
+        <a href="">
+          <h4>Beauty</h4>
+        </a>
+        <a href="" id="searchbar"><input type="text" placeholder="🔍  What are you looking for ?" /></a>
+        <a href="">
+          <h4>More</h4>
+        </a>
+        <a href="">
+          <h4 id="signin">SignUp/SignIn</h4>
+        </a>
+        <a href="">
+          <h4>Wishlist</h4>
+        </a>
+        <a href="">
+          <h4>Cart</h4>
+        </a>
       </div>
     </div>
-</header>
-<!----------------------------------------------- Header HTML end ----------------------------------------------->
+  </header>
+  <!----------------------------------------------- Header HTML end ----------------------------------------------->
+    <!-- banner  -->
+    <div class="container" id="banner">
 
-
-
-
-    <div id="container">
-        <h2>Deal Corner</h2>
-        <hr>
-        <div id="buyFree">
-            
+      <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+  
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img
+              src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/LS-Uber-HP-Desktop-HeroBanner6-08Dec2022.gif"
+              alt="Chania" width="460" height="345">
+          </div>
+  
+          <div class="item">
+            <img
+              src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/LS-Uber-HP-Desktop-HeroBanner1-12Dec2022A.gif"
+              alt="Chania" width="460" height="345">
+          </div>
+  
+          <div class="item">
+            <img
+              src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/LS-Uber-HP-Desktop-HeroBanner4-05Dec2022.jpg"
+              alt="Flower" width="460" height="345">
+          </div>
+  
+          <div class="item">
+            <img
+              src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/LS-Uber-HP-Desktop-HeroBanner2-05Dec2022.jpg"
+              alt="Flower" width="460" height="345">
+          </div>
+          <div class="item">
+            <img
+              src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/LS-Uber-HP-Desktop-HeroBanner5-05Dec2022.jpg"
+              alt="Flower" width="460" height="345">
+          </div>
         </div>
-        <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/desktop-dept-13modblock-oneBythree-A-menstripbanner-09Dec2022.gif"
-            alt="">
-        <h2>Brand Spotlight</h2>
-        <hr>
-        <div id="brandImage"></div>
-        <h2>Whiterwear Essentials</h2>
-        <hr>
-        <div id="winterClothes">6</div>
-        <h2>Big Brands. Big Discounts</h2>
-        <hr>
-        <div id="bigBrandsProducts"></div>
-        <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/desktop-men-9modblock-StripBanner2-D-24Nov2022.jpg"
-            alt="">
-        <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/desktop-men-8modblock-oneBythree-D-25Nov2022.jpg"
-            alt="">
-        <h2>Shop By category</h2>
-        <hr>
-        <div id="categoryProducts"></div>
-        <h2>Top Trending Brands</h2>
-        <hr>
-        <div id="trandingBrands">12</div>
-        <h2>Flash Sale for Today</h2>
-        <hr>
-        <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/desktop-LS-MEN-modularblock7-oneBythree-A-Men-08Dec2022.jpg"
-            alt="">
-        <h2>Top Picks</h2>
-        <hr>
-        <div id="TopPicks">3</div>
-        <h2>Winter Trends</h2>
-        <hr>
-        <div id="winterTrends">3</div>
-        <h2>Most Loved Styles</h2>
-        <hr>
-        <div id="mostlovedstyle"></div>
-        <h2>Highlights of the Day</h2>
-        <hr>
-        <div id="highlights">3</div>
-        <h2>Trendsetters</h2>
-        <hr>
-        <div id="trendsclothes">3</div>
-        <h2>Active Wardrobe</h2>
-        <hr>
-        <div id="activeWardrobe">3</div>
-        <h2>Deal Corner</h2>
-        <hr>
-        <div id="dealCorner">5</div>
-        <div id="button"><button>SEE ALL</button></div>
-        <h2>Most loved brands</h2>
-        <hr>
-        <div id="mostLovedBrands">2</div>
-        <h2>Essentials For You</h2>
-        <hr>
-        <div id="essentials">2</div>
-        <h2>Trending Watches</h2>
-        <hr>
-        <div id="watch">3</div>
-        <div id="button"><button>SEE ALL</button></div>
-        <h2>Shop By Department</h2>
-        <hr>
-        <div id="shopByDepartment">3</div>
+  
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" ></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </div>
 
-   <!----------------------------------------------- Footer HTML Start ----------------------------------------------->
-<!-- subscribe section -->
-<div id="subscribe">
+
+  <!-- my code -->
+  <div id="container">
+    <h2>Deal Corner</h2>
+    <hr>
+    <div id="buyFree">
+
+    </div>
+    <img
+      src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/desktop-dept-13modblock-oneBythree-A-menstripbanner-09Dec2022.gif"
+      alt="">
+    <h2>Brand Spotlight</h2>
+    <hr>
+    <div id="brandImage"></div>
+    <h2>Whiterwear Essentials</h2>
+    <hr>
+    <div id="winterClothes">6</div>
+    <h2>Big Brands. Big Discounts</h2>
+    <hr>
+    <div id="bigBrandsProducts"></div>
+    <img
+      src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/desktop-men-9modblock-StripBanner2-D-24Nov2022.jpg"
+      alt="">
+    <img
+      src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/desktop-men-8modblock-oneBythree-D-25Nov2022.jpg"
+      alt="">
+    <h2>Shop By category</h2>
+    <hr>
+    <div id="categoryProducts"></div>
+    <h2>Top Trending Brands</h2>
+    <hr>
+    <div id="trandingBrands">12</div>
+    <h2>Flash Sale for Today</h2>
+    <hr>
+    <img
+      src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/desktop-LS-MEN-modularblock7-oneBythree-A-Men-08Dec2022.jpg"
+      alt="">
+    <h2>Top Picks</h2>
+    <hr>
+    <div id="TopPicks">3</div>
+    <h2>Winter Trends</h2>
+    <hr>
+    <div id="winterTrends">3</div>
+    <h2>Most Loved Styles</h2>
+    <hr>
+    <div id="mostlovedstyle"></div>
+    <h2>Highlights of the Day</h2>
+    <hr>
+    <div id="highlights">3</div>
+    <h2>Trendsetters</h2>
+    <hr>
+    <div id="trendsclothes">3</div>
+    <h2>Active Wardrobe</h2>
+    <hr>
+    <div id="activeWardrobe">3</div>
+    <h2>Deal Corner</h2>
+    <hr>
+    <div id="dealCorner">5</div>
+    <div id="button"><button>SEE ALL</button></div>
+    <h2>Most loved brands</h2>
+    <hr>
+    <div id="mostLovedBrands">2</div>
+    <h2>Essentials For You</h2>
+    <hr>
+    <div id="essentials">2</div>
+    <h2>Trending Watches</h2>
+    <hr>
+    <div id="watch">3</div>
+    <div id="button"><button>SEE ALL</button></div>
+    <h2>Shop By Department</h2>
+    <hr>
+    <div id="shopByDepartment">3</div>
+  </div>
+
+  <!----------------------------------------------- Footer HTML Start ----------------------------------------------->
+  <!-- subscribe section -->
+  <div id="subscribe">
     <div id="email_subs">
       <h1>Subscribe to our awesome emails.</h1>
       <p>Get our latest offers and news straight in your inbox.</p>
@@ -136,7 +215,7 @@
       <button>Get It On Google Play</button>
     </div>
   </div>
-  
+
   <!--Footer  -->
   <div id="footer">
     <div>
@@ -162,7 +241,7 @@
       <a href="">Innerwear</a><br>
       <a href="">Grooming</a><br>
       <a href="">Sportswear</a><br>
-  
+
       <a href="">Watches & Sunglasses</a><br>
     </div>
     <div>
@@ -174,7 +253,7 @@
       <a href="">Winterwear</a><br>
       <a href="">Add ons</a><br>
       <a href="">The Teen Shop</a><br>
-  
+
     </div>
     <div>
       <h5>Shops&Bags</h5>
@@ -193,7 +272,7 @@
       <a href="">Makeup Nails</a><br>
       <a href="">Mens</a><br>
       <a href="">Perfumes</a><br>
-  
+
     </div>
     <div>
       <h5>Explore</h5>
@@ -217,7 +296,7 @@
       <a href="">Blog</a><br>
       <a href="">Store Locator</a><br>
       <a href="">Landmark Cares</a><br>
-  
+
     </div>
     <div>
       <h5>Help</h5>
@@ -226,12 +305,12 @@
       <a href="">Returns Process</a><br>
       <a href="">Returns Policy</a><br>
       <a href="">Help Centre</a><br>
-  
+
     </div>
   </div>
   <!-- contact option -->
   <div id="contact">
-  
+
     <div>
       <p>You can talk to us</p>
       <p>📞1800-123-1555</p>
@@ -257,6 +336,3 @@
 
 </html>
 <script src="mens.js"></script>
-
-
-
