--- a/mensAllProducts.html
+++ b/mensAllProducts.html
@@ -38,9 +38,7 @@
         <a href=""> <h4>Shoes</h4></a>
         <a href=""> <h4>Bags</h4></a>
         <a href=""><h4>Beauty</h4></a>
-        <a href="" id="searchbar"
-          ><input type="text" placeholder="🔍  What are you looking for ?"
-        /></a>
+       <input oninput="searchProduct()" type="text" id="productName" placeholder="🔍  What are you looking for ?"/>
         <a href=""> <h4>More</h4></a>
         <a href=""><h4 id="signin">SignUp/SignIn</h4></a>
         <a href=""> <h4>Wishlist</h4></a>
@@ -52,15 +50,29 @@
 
 
     <div id="container">
-        <select name="" id="">
+        <select name="" id="sortByPrice">
             <option value="">Price</option>
-            <option value=""></option>
-            <option value=""></option>
+            <option value="500">less 500</option>
+            <option value="600">less 600</option>
+            <option value="700">less 700</option>
+            <option value="1000">Less 1000</option>
+            <option value="1001">Greater 1000</option>
         </select>
+        <select name="" id="discount">
+          <option value="0">New</option>
+          <option value="10">10% OFF</option>
+          <option value="12">12% OFF</option>
+          <option value="15">15% OFF</option>
+          <option value="16">16% OFF</option>
+          <option value="18">18% OFF</option>
+          <option value="40">40% OFF</option>
+          <option value="50">50% OFF</option>
+      </select>
         <select name="" id="">
-            <option value="jeans">Jeans</option>
-            <option value="bootcutjeans">Bootcut Jeans</option>
-            <option value="skinnyfitjeans">Skinny Fit Jeans</option>
+            <option value="jeans">Shirt</option>
+            <option value="bootcutjeans">Formal Shirt</option>
+            <option value="skinnyfitjeans">Casual Shirt</option>
+            <option value="">Polo </option>
         </select>
         <select name="" id="">
             <option value="cottonlycra">Cotton Lycra</option>
@@ -105,15 +117,7 @@
             <option value="">Selected</option>
             <option value="">Spykar</option>
         </select>
-        <select name="" id="">
-            <option value="">New</option>
-            <option value="">30% OFF</option>
-            <option value="">40% OFF</option>
-            <option value="">25% OFF</option>
-            <option value="">2 At 30% OFF</option>
-            <option value="">20% OFF</option>
-            <option value="">50% OFF</option>
-        </select>
+       
         <select name="" id="">
             <option value="">EOSS10</option>
             <option value="">Buy 2 Products Get 30 Percent Off</option>
