--- a/Address.html
+++ b/Address.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>checkout</title>
   </head>
-  <link rel="stylesheet" href="checkout.css">
+  <link rel="stylesheet" href="address.css">
   <body>
     
 
@@ -282,5 +282,5 @@
 
   </body>
 </html>
-<script src="checkout.js"></script>
+<script src="address.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
